Adding  Entity class, DbContext and registering EF Core into project

--- a/SentimentAnalyzer.Api/appsettings.Development.json
+++ b/SentimentAnalyzer.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SentimentAnalyzerApiConnectionString": "Data source=DESKTOP-KTG3JLN; Database=SentimentAnalyzer; TrustServerCertificate=True; User Id=sa; Password=aleksandar;"
   }
 }
